objects/ASI_DFPM_Project_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>ASI_DFPM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Gantt_Chart_Color__c</fullName>
        <formula>IF( ASI_DFPM_Complete__c, &quot;#ACB4B7&quot;, &quot;#2299BB&quot; )</formula>
        <label>Gantt Chart Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Milestone_Name__c</fullName>
        <formula>HYPERLINK(
 &quot;/&quot; &amp; IF( ISNULL( ASI_DFPM_Prefix_Number__c ) , Name, TEXT( ASI_DFPM_Prefix_Number__c ) &amp; &quot;. &quot; &amp; Name)
 , &quot;&quot; 
 , &quot;_parent&quot;
)
 &amp; HYPERLINK(
 &quot;/&quot; &amp; Id
 , IF( ISNULL( ASI_DFPM_Prefix_Number__c ) , Name, TEXT( ASI_DFPM_Prefix_Number__c ) &amp; &quot;. &quot; &amp; Name) 
 , &quot;_parent&quot;
)</formula>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Milestone</label>
        <referenceTo>ASI_DFPM_Project_Milestone__c</referenceTo>
        <relationshipLabel>Project Milestones (Parent Milestone)</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Predeccessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predeccessor Milestone</label>
        <referenceTo>ASI_DFPM_Project_Milestone__c</referenceTo>
        <relationshipLabel>Successor Milestones</relationshipLabel>
        <relationshipName>ASI_DFPM_Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Prefix_Number__c</fullName>
        <label>Prefix Number</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Promotional_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promotional Project</label>
        <referenceTo>ASI_DFPM_Promotional_Project__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_Record_Type_ID__c</fullName>
        <formula>ASI_DFPM_Promotional_Project__r.RecordTypeId</formula>
        <label>Sys_Project_Record_Type_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Sys_Project_Record_Type__c</fullName>
        <formula>ASI_DFPM_Promotional_Project__r.RecordType.DeveloperName</formula>
        <label>Sys_Project Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Complete_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Complete Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Overdue_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Overdue Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Milestone</label>
    <listViews>
        <fullName>ASI_DFPM_All_Milestones</fullName>
        <columns>ASI_DFPM_Milestone_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Predeccessor_Milestone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_Milestones_by_Project</fullName>
        <columns>ASI_DFPM_Prefix_Number__c</columns>
        <columns>NAME</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Predeccessor_Milestone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_DFPM_Promotional_Project__c</field>
            <operation>equals</operation>
            <value>CHIVAS 18 Plug in promotion Template</value>
        </filters>
        <label>Milestones by &lt;Project&gt;</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Milestones</fullName>
        <columns>ASI_DFPM_Milestone_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Predeccessor_Milestone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Outstanding_Milestones</fullName>
        <columns>ASI_DFPM_Milestone_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Predeccessor_Milestone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Outstanding Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_My_Overdue_Milestones</fullName>
        <columns>ASI_DFPM_Milestone_Name__c</columns>
        <columns>ASI_DFPM_Promotional_Project__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Complete__c</columns>
        <columns>ASI_DFPM_Predeccessor_Milestone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_DFPM_End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_DFPM_Sys_Project_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Template</value>
        </filters>
        <label>My Overdue Milestones</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_DFPM_Project_Owner__c</fullName>
        <label>Project Owner</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_DFPM_CannotAddMSToCompleteProject</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_DFPM_Promotional_Project__r.ASI_DFPM_Status__c , &quot;Completed&quot;)</errorConditionFormula>
        <errorMessage>You can not add milestones to a completed project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_CannotBeCompleteWithOpenTasks</fullName>
        <active>true</active>
        <errorConditionFormula>if( and( ASI_DFPM_Complete__c == true,  ASI_DFPM_Total_Task__c &gt;  ASI_DFPM_Total_Complete_Task__c ), true, false)</errorConditionFormula>
        <errorMessage>You cannot mark a milestone as complete if it has open tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_EndDate_in_project</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_DFPM_End_Date__c) &amp;&amp; !ISBLANK(ASI_DFPM_Promotional_Project__r.ASI_DFPM_End_Date__c) &amp;&amp; (ASI_DFPM_End_Date__c &gt; ASI_DFPM_Promotional_Project__r.ASI_DFPM_End_Date__c)</errorConditionFormula>
        <errorMessage>Milestone end date must be less than or equal to the project end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_Not_Modify_Template_Milestone</fullName>
        <active>false</active>
        <errorConditionFormula>ASI_DFPM_Promotional_Project__r.RecordType.DeveloperName = &quot;ASI_DFPM_Template&quot;</errorConditionFormula>
        <errorMessage>You can NOT add or modify the template milestone. Please contact the system administrator for help</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_after_Pred_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( ASI_DFPM_Start_Date__c )) &amp;&amp; NOT(ISNULL( ASI_DFPM_Predeccessor_Milestone__r.ASI_DFPM_End_Date__c )) &amp;&amp;  ASI_DFPM_Start_Date__c &lt; ASI_DFPM_Predeccessor_Milestone__r.ASI_DFPM_End_Date__c</errorConditionFormula>
        <errorMessage>Milestone start date must not be earlier than its Predecessor&apos;s end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_before_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( ASI_DFPM_Start_Date__c )) &amp;&amp; NOT(ISNULL( ASI_DFPM_End_Date__c )) &amp;&amp; ASI_DFPM_End_Date__c &lt; ASI_DFPM_Start_Date__c</errorConditionFormula>
        <errorMessage>Start date must be less or equal than the end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_in_project</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_DFPM_Start_Date__c) &amp;&amp; !ISBLANK( ASI_DFPM_Promotional_Project__r.ASI_DFPM_Start_Date__c  ) &amp;&amp; (ASI_DFPM_Start_Date__c &lt; ASI_DFPM_Promotional_Project__r.ASI_DFPM_Start_Date__c)</errorConditionFormula>
        <errorMessage>Milestone start date must be greater than or equal to the project start date.</errorMessage>
    </validationRules>
</CustomObject>